# referee

./: .gitignore  LICENSE  README.md  build.sh  referee.cabal  run.sh  setup.sh  stack.yaml
app/: Main.hs
client/: client-stack.yaml  referee-client.cabal  shell.nix  stack.yaml
client/app/: Main.hs
client/src/Referee/: Client.hs  WidgetUtils.hs
client/src/Referee/Login/: Widgets.hs
client/src/Referee/User/: Widgets.hs
client/src/Servant/: Reflex.hs
client/src/Servant/Common/: Req.hs
common/: referee-common.cabal
common/src/Referee/: Routes.hs
common/src/Referee/Game/: Routes.hs
common/src/Referee/Login/: Routes.hs
common/src/Referee/Matchmaking/: Routes.hs
common/src/Referee/User/: Routes.hs  Types.hs
server/: README.md  referee.cabal  server-stack.yaml
server/app/: Main.hs
server/src/: Referee.hs
server/src/Referee/: Config.hs  Demo.hs  Game.hs  Login.hs  Matchmaking.hs  Routes.hs  Server.hs
server/src/Referee/Common/: Types.hs
server/src/Referee/Examples/: Experimental.hs  RockPaperScissors.hs
server/src/Referee/Examples/RockPaperScissors/: Client.hs  Server.hs
server/src/Referee/Game/: Routes.hs  Server.hs  Types.hs
server/src/Referee/Login/: Server.hs  Types.hs
server/src/Referee/Login/Handler/: InMemory.hs
server/src/Referee/Matchmaking/: Client.hs  Server.hs  Types.hs
server/src/Referee/User/: Server.hs
server/src/Referee/User/Handler/: InMemory.hs
server/test/: Spec.hs  TestMatchmaking.hs
server/test/Referee/Examples/RockPaperScissors/: RulesSpec.hs
src/: Referee.hs
src/Referee/: Authentication.hs  Config.hs  Game.hs  Handler.hs  Login.hs  Matchmaking.hs  Routes.hs  Server.hs  User.hs  Utils.hs  UuidMap.hs
src/Referee/Common/: Types.hs
src/Referee/Examples/: RockPaperScissors.hs
src/Referee/Examples/RockPaperScissors/: Rules.hs  Server.hs
src/Referee/Game/: Api.hs  Routes.hs  Types.hs
src/Referee/Game/Handler/: InMemory.hs
src/Referee/Login/: Api.hs  Client.hs  Routes.hs  Types.hs
src/Referee/Login/Handler/: InMemory.hs
src/Referee/Matchmaking/: Api.hs  Client.hs  Routes.hs  Types.hs
src/Referee/Matchmaking/Handler/: InMemory.hs
src/Referee/User/: Api.hs  Client.hs  Routes.hs  Server.hs  Types.hs
src/Referee/User/Handler/: InMemory.hs
test/: Spec.hs  TestMatchmaking.hs
