name:                referee
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ojw/referee#readme
license:             BSD3
license-file:        LICENSE
author:              James Orr
maintainer:          orrjamesw@gmail.com
copyright:           Copyright: (c) 2016 James Orr
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Referee
                     , Referee.Examples.RockPaperScissors
                     , Referee.Config
                     , Referee.User.Routes
                     , Referee.User.Handler.InMemory
                     , Referee.User.Api
                     , Referee.User.Types
                     , Referee.User
                     , Referee.Matchmaking
                     , Referee.UuidMap
                     , Referee.Utils
                     , Referee.Matchmaking.Routes
                     , Referee.Matchmaking.Handler.InMemory
                     , Referee.Matchmaking.Api
                     , Referee.Matchmaking.Types
                     , Referee.Routes
                     , Referee.Common.Types
                     , Referee.User.Client
                     , Referee.Matchmaking.Client
                     , Referee.Login
                     , Referee.Login.Routes
                     , Referee.Login.Handler.InMemory
                     , Referee.Login.Api
                     , Referee.Login.Types
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , containers
                     , lens
                     , uuid
                     , random
                     , stm
                     , transformers
                     , jose-jwt
                     , bytestring
                     , aeson
                     , text
                     , envy
                     , dotenv
                     , free
                     , wai
                     , warp
                     , errors
                     , servant-js
                     , http-client
                     , errors
                     , cryptonite
  default-language:    Haskell2010

executable referee-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , referee
                     , warp
                     , servant-js
                     , bytestring
                     -- hspec shouldn't be required for the executable
                     -- but intero complains if it isn't here
                     , hspec
  default-language:    Haskell2010

test-suite referee-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , referee
                     , doctest
                     , hspec
                     , text
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ojw/referee
