name:                referee-common
version:             0.1.0.0
synopsis:            Common modules for referee server and client.
description:         Please see README.md
homepage:            https://github.com/ojw/referee#readme
license:             BSD3
license-file:        LICENSE
author:              James Orr
maintainer:          orrjamesw@gmail.com
copyright:           Copyright: (c) 2016 James Orr
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, ../common/src
  exposed-modules:     Referee.User.Routes
                     , Referee.User.Types
                     , Referee.UuidMap
                     , Referee.Utils
                     , Referee.Matchmaking.Routes
                     , Referee.Matchmaking.Types
                     , Referee.Common.Types
                     , Referee.Login.Routes
                     , Referee.Login.Types
                     , Referee.Authentication
                     , Referee.Game.Types
                     , Referee.Game.Routes
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , containers
                     , lens
                     , uuid
                     , random
                     , stm
                     , transformers
                     , jose-jwt
                     , aeson
                     , text
                     , bytestring
                     , envy
                     , dotenv
                     , free
                     , wai
                     , warp
                     , errors
                     , servant-js
                     , http-client
                     , errors
                     , cryptonite
  default-language:    Haskell2010

-- executable referee-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , referee
--                      , warp
--                      , servant-js
--                      , bytestring
--                      -- hspec shouldn't be required for the executable
--                      -- but intero complains if it isn't here
--                      , hspec
--   default-language:    Haskell2010

-- test-suite referee-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , referee
--                      , doctest
--                      , uuid
--                      , hspec
--                      , text
--                      , containers
--                      , servant
--                      , servant-client
--                      , servant-server
--                      , containers
--                      , lens
--                      , uuid
--                      , random
--                      , stm
--                      , transformers
--                      , jose-jwt
--                      , aeson
--                      , text
--                      , bytestring
--                      , envy
--                      , dotenv
--                      , free
--                      , wai
--                      , warp
--                      , errors
--                      , servant-js
--                      , http-client
--                      , errors
--                      , cryptonite
--                      , uuid
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ojw/referee
