name:                referee-common
version:             0.1.0.0
synopsis:            Common modules for referee server and client.
description:         Please see README.md
homepage:            https://github.com/ojw/referee#readme
license:             BSD3
license-file:        LICENSE
author:              James Orr
maintainer:          orrjamesw@gmail.com
copyright:           Copyright: (c) 2016 James Orr
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Referee.User.Routes
                     , Referee.User.Types
                     , Referee.UuidMap
                     , Referee.Utils
                     , Referee.Matchmaking.Routes
                     , Referee.Matchmaking.Types
                     , Referee.Common.Types
                     , Referee.Login.Routes
                     , Referee.Login.Types
                     , Referee.Authentication
                     , Referee.Game.Types
                     , Referee.Game.Routes
                     , Referee.Routes
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , containers
                     , lens
                     , uuid
                     , random
                     , stm
                     , transformers
                     , jose-jwt
                     , aeson
                     , text
                     , bytestring
                     , envy
                     , dotenv
                     , free
                     , wai
                     , warp
                     , errors
                     , servant-js
                     , http-client
                     , errors
                     , cryptonite
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ojw/referee
